--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             <!--Cloudstack Links-->
             <section>
                 <h2 style="padding-top: 80px;">Google Cloudstack</h2>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://getitawayblogs.github.io/All-You-Need-To-Know-About-De-Fits-And-Why-It-s-Essential-For-Your-Commercial-Building/">https://getitawayblogs.github.io/All-You-Need-To-Know-About-De-Fits-And-Why-It-s-Essential-For-Your-Commercial-Building/</a><br>
+                <a target="_bLank" href="https://getitaway.s3.us-east-005.backblazeb2.com/All+You+Need+To+Know+About+De-Fits+And+Why+It%E2%80%99s+Essential+For+Your+Commercial+Building/index.html">https://getitaway.s3.us-east-005.backblazeb2.com/All+You+Need+To+Know+About+De-Fits+And+Why+It%E2%80%99s+Essential+For+Your+Commercial+Building/index.html</a><br>
+                <a target="_bLank" href="https://all-you-need-to-know-about-de-fi-git-de7ed8-getitaways-projects.vercel.app/">https://all-you-need-to-know-about-de-fi-git-de7ed8-getitaways-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://exquisite-heliotrope-988abd.netlify.app/">https://exquisite-heliotrope-988abd.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
